force-app/main/default/objects/MetaHelper__Bulk_Field_Creator_Cred__mdt/MetaHelper__Bulk_Field_Creator_Cred__mdt.object-meta.xml
<CustomObject>
    <label>Bulk Field Creator Cred</label>
    <pluralLabel>Bulk Field Creator Creds</pluralLabel>
</CustomObject>