force-app/main/default/objects/MetaHelper__Bulk_Field_Creator_Cred__mdt/fields/MetaHelper__AuthPage__c.field-meta.xml
<CustomField>
    <fullName>MetaHelper__AuthPage__c</fullName>
    <label>AuthPage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>