force-app/main/default/objects/MetaHelper__Bulk_Field_Creator_Cred__mdt/fields/MetaHelper__Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>MetaHelper__Client_Secret__c</fullName>
    <label>Client Secret</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>