force-app/main/default/objects/MetaHelper__Bulk_Field_Creator_Cred__mdt/fields/MetaHelper__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>MetaHelper__Endpoint__c</fullName>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>