force-app/main/default/objects/MetaHelper__Bulk_Field_Creator_Cred__mdt/fields/MetaHelper__Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>MetaHelper__Instance_URL__c</fullName>
    <label>Instance URL</label>
    <type>Url</type>
</CustomField>